# language-showdown-2026

./: LICENSE  README.md  docker-compose.yaml
benchmark/: bench.sh
go-fiber/: Dockerfile  go.mod  main.go
python-fastapi/: Dockerfile  main.py  requirements.txt
rust-axum/: Cargo.toml  Dockerfile
rust-axum/src/: main.rs  models.rs
shared/: init.sql
